[package]
name = "rust-engine"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = {version = "1", features = ["full"]}
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bincode     = "1"

# Graph library for lineage graph
petgraph    = "0.6"

# Concurrent HashMap (like ConcurrentHashMap)
dashmap     = "5"

# CLI argument parsing (like Apache Commons CLI)
clap        = { version = "4", features = ["derive"] }

# HTTP web framework (like Spring MVC)
axum        = "0.7"
tower-http  = { version = "0.5", features = ["cors", "trace"] }

# LZ4 compression for event store
lz4_flex    = "0.11"

# High-performance channel (like LinkedBlockingQueue)
flume       = "0.11"

# Error handling
anyhow      = "1"

# Logging
tracing              = "0.1"
tracing-subscriber   = "0.3"

[profile.release]
lto     = true   # Link-time optimisation (like -O3)
panic   = "abort" # Smaller binary, faster panics

